# timetable-gui

./: .gitignore  README.md  config.py  gui.py  logic.py  main.py  pyproject.toml  test_logic.py
