[project]
name = "timetable-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.2",
    "nuitka[app]>=4.0.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "zstandard>=0.25.0",
]
